backend/server.log

> library-management-backend@1.0.0 dev
> nodemon server.js

[33m[nodemon] 3.1.10[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: js,mjs,cjs,json[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.2] injecting env (4) from .env -- tip: ⚙️  specify custom .env file path with { path: '/custom/path/.env' }
Server running on port 5000
MongoDB Connected: inootbook-shard-00-02.an4mp.mongodb.net
Database Name: test
Login attempt: { email: 'admin@library.com', password: 'admin123' }
Database connection state: 1
Looking for user: admin@library.com
Total users in database: 9
User found: YES
Testing password...
Password match: true
Login successful, generating token
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.2] injecting env (4) from .env -- tip: 📡 observe env with Radar: https://dotenvx.com/radar
Database connection error: ReferenceError: librarytest is not defined
    at connectDB (/Users/rampareek/Desktop/Library-Management-System-main/library-management-backend/config/database.js:6:16)
    at Object.<anonymous> (/Users/rampareek/Desktop/Library-Management-System-main/library-management-backend/server.js:11:1)
    at Module._compile (node:internal/modules/cjs/loader:1734:14)
    at Object..js (node:internal/modules/cjs/loader:1899:10)
    at Module.load (node:internal/modules/cjs/loader:1469:32)
    at Module._load (node:internal/modules/cjs/loader:1286:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:152:5)
    at node:internal/main/run_main_module:33:47
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
/Users/rampareek/Desktop/Library-Management-System-main/library-management-backend/config/database.js:6
      dbName : librarytest'
                          ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1666:18)
    at Module._compile (node:internal/modules/cjs/loader:1708:20)
    at Object..js (node:internal/modules/cjs/loader:1899:10)
    at Module.load (node:internal/modules/cjs/loader:1469:32)
    at Module._load (node:internal/modules/cjs/loader:1286:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1491:12)
    at require (node:internal/modules/helpers:135:16)
    at Object.<anonymous> (/Users/rampareek/Desktop/Library-Management-System-main/library-management-backend/server.js:4:19)

Node.js v24.1.0
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.2] injecting env (4) from .env -- tip: ⚙️  load multiple .env files with { path: ['.env.local', '.env'] }
Server running on port 5000
MongoDB Connected: inootbook-shard-00-02.an4mp.mongodb.net
Database Name: librarytest
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.2] injecting env (4) from .env -- tip: 🔐 encrypt with Dotenvx: https://dotenvx.com
Server running on port 5000
MongoDB Connected: inootbook-shard-00-01.an4mp.mongodb.net
Database Name: librarytest2
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.2] injecting env (4) from .env -- tip: ⚙️  enable debug logging with { debug: true }
Server running on port 5000
MongoDB Connected: inootbook-shard-00-02.an4mp.mongodb.net
Database Name: librarytest2
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.2] injecting env (4) from .env -- tip: 🛠️  run anywhere with `dotenvx run -- yourcommand`
Server running on port 5000
MongoDB Connected: inootbook-shard-00-00.an4mp.mongodb.net
Database Name: librarytest2
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.2] injecting env (4) from .env -- tip: 🛠️  run anywhere with `dotenvx run -- yourcommand`
Server running on port 5000
MongoDB Connected: inootbook-shard-00-00.an4mp.mongodb.net
Database Name: librarytest2
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.2] injecting env (4) from .env -- tip: ⚙️  override existing env vars with { override: true }
Server running on port 5000
MongoDB Connected: inootbook-shard-00-01.an4mp.mongodb.net
Database Name: librarytest2
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.2] injecting env (4) from .env -- tip: 📡 version env with Radar: https://dotenvx.com/radar
Server running on port 5000
MongoDB Connected: inootbook-shard-00-02.an4mp.mongodb.net
Database Name: librarytest2
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.2] injecting env (4) from .env -- tip: 🔐 prevent building .env in docker: https://dotenvx.com/prebuild
Server running on port 5000
MongoDB Connected: inootbook-shard-00-00.an4mp.mongodb.net
Database Name: librarytest2
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.2] injecting env (4) from .env -- tip: 📡 observe env with Radar: https://dotenvx.com/radar
Server running on port 5000
MongoDB Connected: inootbook-shard-00-00.an4mp.mongodb.net
Database Name: librarytest2
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.2] injecting env (4) from .env -- tip: 🔐 prevent committing .env to code: https://dotenvx.com/precommit
Server running on port 5000
MongoDB Connected: inootbook-shard-00-02.an4mp.mongodb.net
Database Name: librarytest2
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.2] injecting env (4) from .env -- tip: 🛠️  run anywhere with `dotenvx run -- yourcommand`
Server running on port 5000
MongoDB Connected: inootbook-shard-00-02.an4mp.mongodb.net
Database Name: librarytest2
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.2] injecting env (4) from .env -- tip: ⚙️  enable debug logging with { debug: true }
Server running on port 5000
MongoDB Connected: inootbook-shard-00-02.an4mp.mongodb.net
Database Name: librarytest2
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.2] injecting env (4) from .env -- tip: 🛠️  run anywhere with `dotenvx run -- yourcommand`
Server running on port 5000
MongoDB Connected: inootbook-shard-00-01.an4mp.mongodb.net
Database Name: librarytest2
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.2] injecting env (4) from .env -- tip: 📡 observe env with Radar: https://dotenvx.com/radar
Server running on port 5000
MongoDB Connected: inootbook-shard-00-00.an4mp.mongodb.net
Database Name: librarytest2
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node server.js`[39m
[dotenv@17.2.2] injecting env (4) from .env -- tip: 🔐 encrypt with Dotenvx: https://dotenvx.com
Server running on port 5000
MongoDB Connected: inootbook-shard-00-02.an4mp.mongodb.net
Database Name: librarytest2
Login attempt: { email: 'ram@library.com', password: 'ram1234567' }
Database connection state: 1
Looking for user: ram@library.com
Total users in database: 1
User found: NO
User not found
Login attempt: { email: 'ram1@library.com', password: 'ram1234567' }
Database connection state: 1
Looking for user: ram1@library.com
Total users in database: 1
User found: YES
Testing password...
Password match: true
Login successful, generating token
Login attempt: { email: 'admin@library.com', password: 'admin123' }
Database connection state: 1
Looking for user: admin@library.com
Total users in database: 1
User found: NO
User not found
Login attempt: { email: 'admin@library.com', password: 'admin123' }
Database connection state: 1
Looking for user: admin@library.com
Total users in database: 1
User found: NO
User not found
Login attempt: { email: 'ram1@library.com', password: 'ram1234567' }
Database connection state: 1
Looking for user: ram1@library.com
Total users in database: 1
User found: YES
Testing password...
Password match: true
Login successful, generating token
